--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".HomeScreen"></activity>
+        <activity android:name=".InitialData" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/FullScreenTheme">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
