--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     implementation 'com.github.AppIntro:AppIntro:4.2.3'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.android.support:design:28.0.0'
 
 }
