--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.android.support:design:28.0.0'
-
+    implementation 'com.android.support:design:27.0.0';
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation "android.arch.work:work-runtime:1.0.0"
 }
